--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -2,19 +2,30 @@
 
 {% load i18n %}
 
-{% block page_title %}AboutMe - {% trans "Home" %}{% endblock %}
+{% block page_title %}
+{% trans "AboutMe" as app_title %}
+{% trans "Home" as section_title %}
+{{ app_title }} - {{ section_title }}
+{% endblock %}
 
 {% block content %}
 
-<div id="last-user-feedback" class="box box-lg feedback-box col-md-6" style="float: left; width: 50%; height: 200x;">
-    <b>{% trans "Last feedback of you" %}</b><br>
+{% trans "There are no feedbacks of you. Invite more friends so they can write about you." as no_feedbacks_of_you %}
+{% trans "There are no feedbacks of your friends." as no_feedbacks_of_your_friends %}
+{% trans "No friends. Invite more friends here." as no_friends %}
+{% trans "Last feedback of you" as last_feedback %}
+{% trans "Last feedback of your friends" as last_feedback_friends %}
+
+<div id="last-user-feedback" class="box  box-lg feedback-box col-md-6" style="float: left; width: 50%; height: 200x;">
+<div class="box box-border" style="width: 100%;">
+    <b>{{ last_feedback }}</b><br>
 
     {% if last_user_feedback %}
         <div class="user-pic">
             <img src="xyz"></img>
         </div>
         <div class="feedback-info">
-            <div class="feedback-target"><a href="/feedbacks/{{ feedback.target.id }}">{{ last_user_feedback.target.first_name }} {{ last_user_feedback.target.last_name }}</a></div>
+            <div class="feedback-target"><a href="{% url 'friends_feedbacks' feedback.target.id %}">{{ last_user_feedback.target.first_name }} {{ last_user_feedback.target.last_name }}</a></div>
             <div class="feedback-msg well"><p class="lead">{{ last_user_feedback.message }}</p></div>
             <div class="feedback-post-date small pull-right">
                 {% if not last_user_feedback.anonymous %}
@@ -24,19 +35,21 @@
             </div>
         </div>
     {% else %}
-        {% trans "There are no feedbacks of you. Invite more friends so they can write about you." %}
+        {{ no_feedbacks_of_you }}
     {% endif %}
+    </div>
 </div>
 
 <div id="last-friend-feedback" class="box box-lg feedback-box col-md-6" style="float: left; width: 50%; height: 200px;">
-    <b>{% trans "Last feedback of your friends" %}</b><br>
+<div class="box box-border" style="width: 100%;">
+    <b>{{ last_feedback_friends }}</b><br>
 
     {% if last_friend_feedback %}
         <div class="user-pic">
             <img src="xyz"></img>
         </div>
         <div class="feedback-info">
-            <div class="feedback-target"><a href="/feedbacks/{{ feedback.target.id }}">{{ last_friend_feedback.target.first_name }} {{ last_friend_feedback.target.last_name }}</a></div>
+            <div class="feedback-target"><a href="{% url 'friends_feedbacks' feedback.target.id %}">{{ last_friend_feedback.target.first_name }} {{ last_friend_feedback.target.last_name }}</a></div>
             <div class="feedback-msg well"><p class="lead">{{ last_friend_feedback.message }}</p></div>
             <div class="feedback-post-date small pull-right">
                 {% if not last_friend_feedback.anonymous %}
@@ -46,11 +59,13 @@
             </div>
         </div>
     {% else %}
-        {% trans "There are no feedbacks of your friends." %}
+        {{ no_feedbacks_of_your_friends }}
     {% endif %}
 </div>
+</div>
 
-<div id="friend-bar" class="row">
+<div id="friend-bar" class="row" style="width: 100%;">
+<div class="box box-border" style="width: 100%">
     {% for friend in friends %}
         <div class="box-sm col-md-1">
             <a href="/feedbacks/{{ friend.id }}">
@@ -63,11 +78,12 @@
             </a>
         </div>
     {% empty %}
-        {% trans "No friends. Invite more friends here." %}
+        {{ no_friends }}
     {% endfor %}
 
     <!--<div id="more-friends" class="pull-right">
         <a href="#"><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></a>
     </div>-->
+</div>
 </div>
 {% endblock %}
