--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -2,6 +2,8 @@
 
 {% load i18n %}
 
+{% block page_title %}AboutMe - User registration{% endblock %}
+
 {% block custom_head %}
 <style type="text/css">
     .container {
