--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load staticfiles %}
 
 {# Translators: application title #}
 {% trans "AboutMe" as app_title %}
@@ -19,7 +20,7 @@
 
 <!-- jQuery-UI -->
 <link rel="stylesheet" href="/static/jquery-ui/jquery-ui.min.css">
-<script src="/static/jquery-ui/jquery-ui.min.js"></script>
+<script src="{% static "jquery-ui/jquery-ui.min.js" %}"></script>
 
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
