--- a/templates/base_home.html
+++ b/templates/base_home.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
+{% load staticfiles %}
+
 {% block custom_head %}
-<link rel="stylesheet" href="/static/css/home.css">
+<link rel="stylesheet" href="{% static "css/home.css" %}">
 {% endblock %}
 
 {% block menu %}
