--- a/user_login/templates/login.html
+++ b/user_login/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load i18n %}
+{% load staticfiles %}
 
 {% block custom_head %}
 <style type="text/css">
@@ -12,10 +13,23 @@
         background: rgba(255, 0, 0, 1);
     }
 </style>
+
+<link href="{% static "django_facebook/css/facebook.css" %}" type="text/css" rel="stylesheet" media="all" />
 {% endblock %}
 
 {% block content %}
+
 <div class="container">
+
+<form action="{% url 'facebook_connect' %}?facebook_login=1" method="post">
+    <input type="hidden" value="{{ request.path }}" name="next" />
+    <input type="hidden" value="{{ request.path }}" name="register_next" />
+    <input type="hidden" value="{{ request.path }}" name="error_next" />
+    {% csrf_token %}
+    <input onclick="F.connect(this.parentNode); return false;" type="image" src="{% static "django_facebook/images/facebook_login.png" %}" />
+</form>
+
+
 <div id="login-panel" class="panel panel-primary">
 	<div class="panel-heading">
 		<h3 class="panel-title">Login</h3>
