--- a/templates/base.html
+++ b/templates/base.html
@@ -27,18 +27,14 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-<style type="text/css">
-    /*.page-header h1 {
-        padding-left: 25px;
-    }*/
-</style>
+<link rel="stylesheet" href="{% static "css/home.css" %}">
 
 {% block custom_head %}{% endblock %}
 </head>
 <body>
 
-<div class="page-header">
-    <div class="container">
+<div class="container-fluid">
+    <div class="page-header">
         <h1><a href="{% url 'home' %}">{{ app_title }}</a> <small>{{ app_description }}</small></h1>
     </div>
 </div>
