--- a/templates/menu.html
+++ b/templates/menu.html
@@ -36,7 +36,7 @@
                         aria-expanded="false">{{ user.first_name }} {{ user.last_name }} <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="{% url 'user_profile' %}">{% trans "Profile" %}</a></li>
-                        <li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
+                        <li><a href="{% url 'user_logout' %}">{% trans "Logout" %}</a></li>
                     </ul>
                 </li>
             </ul>
