--- a/feedbacks/templates/my_feedbacks.html
+++ b/feedbacks/templates/my_feedbacks.html
@@ -1,6 +1,7 @@
 {% extends "base_home.html" %}
 
 {% load i18n %}
+{% load staticfiles %}
 
 {% block page_title %}AboutMe - {% trans "My feedbacks" %}{% endblock %}
 
@@ -9,7 +10,7 @@
 
 <div class="box box-lg box-horizontal">
     <div class="user-pic">
-        <img src="xyz"></img>
+        <img src="/{{ friend.image }}"></img>
     </div>
     <div style="margin-left: 15px;">
         <h2>{{ friend.first_name }} {{ friend.last_name }}</h2>
@@ -17,7 +18,7 @@
 </div>
 
 <br>
-    
+
 {% for feedback in feedbacks|dictsortreversed:"post_date" %}
 
     {% if forloop.counter0|divisibleby:2 %}
@@ -42,7 +43,7 @@
                 {% if feedback.approved %}
                     Feedback published
                 {% else %}
-                    {% trans "Feedback not published" %} - <span><a href="/feedbacks/{{ feedback.id }}/publish">{% trans "Publish it!" %}</a></span>
+                    {% trans "Feedback not published" %} - <span><a href="{% url 'publish_feedback' feedback.id %}">{% trans "Publish it!" %}</a></span>
                 {% endif %}
             </div>
 
@@ -84,7 +85,8 @@ function deleteFeedback() {
         buttons: {
             "Yes": function() {
                 $(this).dialog("close");
-                window.location = "/feedbacks/" + feedback_id +  "/delete";
+                window.location = "/feedbacks/" + feedback_id + "/delete";
+                
             },
             "No": function() {
                 $(this).dialog("close");
