--- a/templates/friends_feedbacks.html
+++ b/templates/friends_feedbacks.html
@@ -10,7 +10,7 @@
 
 <div class="box box-lg box-horizontal">
     <div class="user-pic">
-        <img src="xyz"></img>
+        <img src="/{{ friend.image }}"></img>
     </div>
     <div style="margin-left: 15px;">
         <h2>{{ friend.first_name }} {{ friend.last_name }}</h2>
