--- a/templates/post_feedback.html
+++ b/templates/post_feedback.html
@@ -20,7 +20,7 @@
 <div class="box box-lg feedback-box col-md-12">
 
     <div class="user-pic">
-        <img src="xyz"></img>
+        <img src="/{{ target_user.image }}"></img>
     </div>
         
     <div class="feedback-info">
